# morhpiq-lume

./: .env  .env.sample  Cargo.toml
.cargo/: config.toml
assets/fonts/icons/: LICENSE.txt  config.json  demo.html
assets/fonts/icons/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css  icons-codes.css  icons-embedded.css  icons-ie7-codes.css  icons-ie7.css  icons.css  iconsformorphiqlume-codes.css  iconsformorphiqlume-embedded.css  iconsformorphiqlume-ie7-codes.css  iconsformorphiqlume-ie7.css  iconsformorphiqlume.css  morphiq-lume-codes.css  morphiq-lume-embedded.css  morphiq-lume-ie7-codes.css  morphiq-lume-ie7.css  morphiq-lume.css
assets/fonts/icons/font/: fontello.eot  fontello.toml  icons  icons.eot  iconsformorphiqlume.eot
assets/themes/: corporate.toml  cupcake.toml  dark.toml  dim.toml  dracula.toml  forest.toml  garden.toml  halloween.toml  light.toml  luxuty.toml  wireframe.toml
src/: main.rs
src/cli/: mod.rs
src/gui/: mod.rs  morphiq.rs
src/gui/components/: button.rs  header.rs  menu.rs  mod.rs  sidebar.rs
src/gui/components/charts/: donut.rs  mod.rs
src/gui/components/charts/bars/: mod.rs  stacked.rs
src/gui/components/charts/bars/stacked/: horizontal.rs  mod.rs  vertical.rs
src/gui/components/types/: button.rs  input.rs  mod.rs  status.rs
src/gui/styles/: button.rs  container.rs  mod.rs  rule.rs  style_constant.rs  text.rs  text_input.rs
src/gui/styles/custom_themes/: corporate.rs  mod.rs
src/gui/styles/types/: gradient_type.rs  mod.rs  palette.rs  palette_extension.rs  texts.rs
src/gui/types/: login.rs  message.rs  mod.rs
src/gui/views/: dashboard_view.rs  login_view.rs  loginview.rs  mod.rs
src/gui/views/employees/: mod.rs
src/gui/views/home/: mod.rs
src/gui/views/home/panes/: employee_status.rs  employee_tops.rs  employee_tracker.rs  mod.rs
src/gui/views/layouts/: mod.rs
src/gui/views/mainview/: layout.rs  mod.rs
src/gui/views/types/: mod.rs  running_view.rs  settings_view.rs
src/utils/: envs.rs  icons.rs  mod.rs
src/utils/types/: icon.rs
